# aisportvideo

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/aisportvideo/: main.py
src/aisportvideo/assets/: rtdetr-l.onnx  rtdetr-x.onnx  yolo11s.onnx  yolo11x.onnx
src/aisportvideo/cli/: detect.py  models.py
src/aisportvideo/models/: huggingface.py  rtdetr.py  ultralytics.py  yolo.py
src/aisportvideo/ui/: home.py
src/aisportvideo/utils/: colors.py  layout.py  models.py
