[project]
name = "aisportvideo"
version = "0.1.0"
description = "Tool to help you auto-clip sport videos."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=14.2.0",
    "distinctipy>=1.3.4",
    "httpx>=0.28.1",
    "huggingface-hub>=0.29.3",
    "lap>=0.5.12",
    "numpy>=2.1.1",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "onnxslim>=0.1.48",
    "opencv-python>=4.11.0.86",
    "pyside6>=6.8.2.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "typer>=0.15.2",
    "ultralytics>=8.3.91",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "EM", "F", "W", "I", "FA", "DTZ", "INP", "LOG", "T20", "SIM", "TC"]
ignore = ["TC006"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/aisportvideo", "src/sbdt"]